packages/svelte/tests/validator/samples/invalid-node-placement-7/input.svelte
<some-table>
	<!-- No error -->
	<tbody></tbody>
</some-table>

<div>
	<!-- Error -->
	<tbody></tbody>
</div>
