packages/svelte/tests/compiler-errors/samples/component-invalid-name/main.svelte
<!-- ok -->
<Component />
<Wunderschön />
<Cæжαकン中 />

<!-- error -->
<Components[1] />
